erDiagram
    EXCHANGE {
        int *id_exchange
        string cod_exchange
        string denumire
        string tara
    }

    COMPANIE {
        int *id_companie
        string denumire
        string cod_fiscal
        string tara_origine
    }

    MONEDA {
        string *cod_moneda
        string denumire
    }

    SIMBOL_BURSIER {
        string *ticker
        int id_companie
        string cod_moneda
        string denumire_simbol
        string sector
    }

    INVESTITOR {
        int *id_investitor
        string nume
        string prenume
        string email
    }

    PORTOFOLIU {
        int *id_portofoliu
        int id_investitor
        string nume_portofoliu
        string activ
    }

    DETINERE_PORTOFOLIU {
        int *id_portofoliu
        string *ticker
        decimal cantitate
        decimal pret_mediu
    }

    ISTORIC_PRET {
        int *id_istoric
        string ticker
        int id_exchange
        datetime moment_cotatie
        decimal pret_inchidere
        int volum
    }

    ORDIN {
        int *id_ordin
        int id_portofoliu
        string ticker
        string tip_sens
        string tip_ordin
        decimal cantitate
        string status_ordin
    }

    EXECUTIE_ORDIN {
        int *id_executie
        int id_ordin
        int id_exchange
        decimal cantitate_executata
        decimal pret_executie
        date data_executie
    }

    TRANZACTIE_NUMERAR {
        int *id_tranzactie
        int id_portofoliu
        string cod_moneda
        string tip_miscare
        decimal suma
        date data_tranzactie
    }

    CURS_VALUTAR {
        int *id_curs
        string cod_moneda_sursa
        string cod_moneda_dest
        date data_curs
        decimal valoare_curs
    }

    INVESTITOR ||--|{ PORTOFOLIU : detine
    COMPANIE ||--o{ SIMBOL_BURSIER : emite
    MONEDA ||--o{ SIMBOL_BURSIER : coteaza_in

    PORTOFOLIU ||--o{ DETINERE_PORTOFOLIU : include
    SIMBOL_BURSIER ||--o{ DETINERE_PORTOFOLIU : apare_in

    SIMBOL_BURSIER ||--o{ ISTORIC_PRET : are_cotatii
    EXCHANGE ||--o{ ISTORIC_PRET : raporteaza

    PORTOFOLIU ||--o{ ORDIN : plaseaza
    SIMBOL_BURSIER ||--o{ ORDIN : vizeaza

    ORDIN ||--o{ EXECUTIE_ORDIN : se_executa_in
    EXCHANGE ||--o{ EXECUTIE_ORDIN : executa

    PORTOFOLIU ||--o{ TRANZACTIE_NUMERAR : genereaza
    MONEDA ||--o{ TRANZACTIE_NUMERAR : este_in

    MONEDA ||--o{ CURS_VALUTAR : este_sursa
    MONEDA ||--o{ CURS_VALUTAR : este_destinatie
